<resources>
    <string name="app_name">Apogee</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="logo_text">logo_text</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="username_availability">Username Availability</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="more_options">More Options</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="widget_label">Apogee Habits</string>
    <string name="widget_description">Track today\'s habits and tap to complete them from your home screen.</string>
    <string name="habit_streak_widget_label">Habit Streak</string>
    <string name="habit_streak_widget_description">A single habit\'s streak, right on your home screen.</string>
</resources>