<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authentication.activity.LoginActivity">

    <ImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/back_arrow"
        android:layout_margin="10dp"
        android:padding="12dp"
        android:background="@drawable/ripple_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <LinearLayout
        android:id="@+id/editText_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="30sp"
            android:layout_margin="24dp"
            android:padding="8dp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textColor="@color/button_primary"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/edittext_bg"
            android:inputType="text"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textColor="@color/button_primary"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/edittext_bg">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/show_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/show_password"
                android:src="@drawable/show_password"
                tools:visibility="visible"
                android:layout_marginStart="8dp" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/button_with_ripple"
        android:elevation="10dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>